# MiniTest

./: CMakeLists.txt  LICENSE  README.md
include/minitest/: minitest.hpp
